...
    return AppBar(
      brightness: Brightness.light,
      backgroundColor: notifier.selectedColor.getColor(),
      iconTheme: IconThemeData(color: appIconGreyForColoredBg),
      leading: IconButton(
          iconSize: mqScreenSize.width * 0.058,
          key: ValueKey('note_setup_back'),
          icon: Icon(Icons.arrow_back),
          onPressed: () async {
            var wasEditing = false;
            if (notifier.canCreateNote) {
              if (notifier.creating) {
                noteSetupBloc.onCreateNote(notifier.noteBeingSetUp);
...
              // I put a delay here cuz it takes a while to unfocus, apparently.
              // FIXME: This is very very bad code... but will work for now.
              // I just put some magic number for the duration here..
              await Future.delayed(Duration(milliseconds: 400));

              globalHomeScaffoldKey.currentState.showSnackBar(
                  SnackBar(content: Text('Empty note discarded')));
            }
            Navigator.pop(context);
          }),
      actions: <Widget>[
        Padding(
          key: ValueKey('note_setup_pin_button'),
          padding: EdgeInsets.symmetric(horizontal: mqScreenSize.width * 0.029),
          child: PngIconButton(
              backgroundColor: notifier.selectedColor.getColor(),
              pngIcon: (notifier.pinned)
                  ? PngIcon(
                      size: mqScreenSize.width * 0.058,
...
                    ),
              onTap: () {
                notifier.togglePinned();
              }),
        ),
        Padding(
          key: ValueKey('note_setup_reminder_button'),
          padding: EdgeInsets.symmetric(horizontal: mqScreenSize.width * 0.029),
          child: PngIconButton(
              backgroundColor: notifier.selectedColor.getColor(),
              pngIcon: PngIcon(
                size: mqScreenSize.width * 0.058,
                fileName: 'outline_add_alert_black_48.png',
...
                    child: ReminderSetupDialog(),
                  ),
                );
              }),
        ),
        Padding(
          key: ValueKey('note_setup_archive_button'),
          padding: EdgeInsets.symmetric(horizontal: mqScreenSize.width * 0.029),
          child: PngIconButton(
              backgroundColor: notifier.selectedColor.getColor(),
              pngIcon: (shouldUnarchive)
                  ? PngIcon(
                      size: mqScreenSize.width * 0.058,
...
                      bottom: mqScreenSize.width * 0.175,
                      left: mqScreenSize.width * 0.049,
                      right: mqScreenSize.width * 0.049),
                  child: Column(
                    children: <Widget>[
                      TextField(
                        key: ValueKey('note_setup_title'),
                        controller: notifier.titleController,
                        focusNode: notifier.titleFocusNode,
                        onTap: () {
                          notifier.closeLeftBottomSheet();
                          notifier.closeRightBottomSheet();
                        },
...
                              color: appGreyForColoredBg,
                              fontSize: mqScreenSize.width * 0.056),
                        ),
                      ),
                      SizedBox(height: mqScreenSize.width * 0.029),
                      TextField(
                        key: ValueKey('note_setup_text'),
                        controller: notifier.textController,
                        focusNode: notifier.textFocusNode,
                        autofocus: notifier.creating,
                        scrollPadding:
                            EdgeInsets.all(mqScreenSize.width * 0.136),
                        onTap: () {
...
    return Container(
      color: notifier.selectedColor.getColor(),
      child: Column(
        mainAxisSize: MainAxisSize.min,
        children: <Widget>[
          BottomSheetTile(
            key: ValueKey('right_bs_delete_button'),
            noteSetupController: notifier,
            pngIcon: PngIcon(
              size: mqScreenSize.width * 0.058,
              fileName: 'outline_delete_black_48.png',
              iconColor: appIconGreyForColoredBg,
            ),
...
          //     iconColor: appIconGreyForColoredBg,
          //   ),
          //   text: 'Collaborator',
          //   onTap: () {},
          // ),
          BottomSheetTile(
            key: ValueKey('right_bs_labels_button'),
            noteSetupController: notifier,
            pngIcon: PngIcon(
              size: mqScreenSize.width * 0.058,
              fileName: 'outline_label_black_48.png',
              iconColor: appIconGreyForColoredBg,
            ),
...
                  lastEditedText,
                  style: TextStyle(
                      color: appVeryDarkGreyForColoredBg,
                      fontSize: mqScreenSize.width * 0.034),
                ),
                PngIconButton(
                    key: ValueKey('note_setup_right_bs_button'),
                    backgroundColor: notifier.selectedColor.getColor(),
                    pngIcon: PngIcon(
                      size: mqScreenSize.width * 0.058,
                      fileName: 'outline_more_vert_black_48.png',
                      iconColor: appIconGreyForColoredBg,
                    ),
...
