...
    var drawerBloc = Provider.of<DrawerBloc>(context);
    var drawerScreenSelection = Provider.of<DrawerScreenSelection>(context);

    return Container(
      width: mqScreenSize.width * 0.863,
      child: Drawer(
        key: ValueKey('drawer'),
        child: ListView(
          children: <Widget>[
            _MyCustomDrawerHeader(),
            _SelectableDrawerItem(
              key: ValueKey('notes_drawer_item'),
              text: 'Notes',
              iconFileName: 'keep-quadrado.png',
              drawerItemIndex: 0,
              onPressed: () {
                if (drawerScreenSelection.selectedScreenIndex != 0) {
                  drawerScreenSelection.changeSelectedScreenToIndex(0);
...
                                child: HomeScreen(),
                              )));
                }
              },
            ),
            _SelectableDrawerItem(
              key: ValueKey('reminders_drawer_item'),
              text: 'Reminders',
              iconFileName: 'outline_notifications_black_48.png',
              drawerItemIndex: 1,
              onPressed: () {
                if (drawerScreenSelection.selectedScreenIndex != 1) {
                  drawerScreenSelection.changeSelectedScreenToIndex(1);
...
                stream: drawerBloc.sortedLabelsStream,
                builder: (context, snapshot) {
                  if (snapshot.hasData && snapshot.data.isNotEmpty) {
                    return Column(
                      children: <Widget>[
                        Container(
                          key: ValueKey('drawer_labels_edit'),
                          padding: EdgeInsets.only(
                              left: mqScreenSize.width * 0.039, right: 4),
                          height: mqScreenSize.width * 0.097,
                          child: Row(
                            mainAxisAlignment: MainAxisAlignment.spaceBetween,
                            children: <Widget>[
...
                      ],
                    );
                  }
                  return _MyCustomDrawerDivider();
                }),
            _SimpleDrawerItem(
              key: ValueKey('create_new_label_drawer_item'),
              text: 'Create new label',
              iconFileName: 'outline_add_black_48.png',
              onPressed: () {
                Navigator.push(
                    context,
                    MaterialPageRoute(
                        builder: (context) =>
                            EditLabelsScreen(autoFocus: true)));
              },
            ),
            _MyCustomDrawerDivider(),
            _SelectableDrawerItem(
              key: ValueKey('archive_drawer_item'),
              text: 'Archive',
              iconFileName: 'outline_archive_black_48.png',
              drawerItemIndex: 2,
              onPressed: () {
                if (drawerScreenSelection.selectedScreenIndex != 2) {
                  drawerScreenSelection.changeSelectedScreenToIndex(2);
...
                  Navigator.pushReplacement(context,
                      MaterialPageRoute(builder: (context) => ArchiveScreen()));
                }
              },
            ),
            _SelectableDrawerItem(
              key: ValueKey('trash_drawer_item'),
              text: 'Trash',
              iconFileName: 'outline_delete_black_48.png',
              drawerItemIndex: 3,
              onPressed: () {
                if (drawerScreenSelection.selectedScreenIndex != 3) {
                  drawerScreenSelection.changeSelectedScreenToIndex(3);
...
