...
class LoginScreen extends StatelessWidget {
  @override
  Widget build(BuildContext context) {
    var mediaQuerySize = MediaQuery.of(context).size;

    return Scaffold(
      key: ValueKey('login_screen'),
      body: Container(
        constraints: BoxConstraints.expand(),
        color: _backgroundColor,
        child: SingleChildScrollView(
          padding: EdgeInsets.all(mediaQuerySize.width * 0.078),
          child: Column(
...
      child: Column(
        mainAxisSize: MainAxisSize.min,
        crossAxisAlignment: CrossAxisAlignment.stretch,
        children: [
          _TextFormFieldContainer(
            mediaQuerySize: widget.mediaQuerySize,
            containerKey: ValueKey('login_username'),
            textFormFieldKey: _usernameKey,
            controller: _usernameController,
            focusNode: usernameFocusNode,
            textInputAction: TextInputAction.next,
            onEditingComplete: () {
              passwordFocusNode.requestFocus();
...
            prefixIconData: Icons.person_outline,
            labelText: 'USERNAME',
          ),
          SizedBox(height: widget.mediaQuerySize.height * 0.03),
          _TextFormFieldContainer(
            mediaQuerySize: widget.mediaQuerySize,
            containerKey: ValueKey('login_pwd'),
            obscureText: true,
            textFormFieldKey: _passwordKey,
            controller: _passwordController,
            focusNode: passwordFocusNode,
            textInputAction: TextInputAction.done,
            validateOnEveryChange: true,
...
                child: Text(
                  'Forgot password?',
                  style: _forgotPwdStyle(widget.mediaQuerySize.width),
                ),
              )),
          FlatButton(
            key: ValueKey('login_button'),
            color: NoteColor.orange.getColor(),
            shape:
                RoundedRectangleBorder(borderRadius: BorderRadius.circular(4)),
            padding: EdgeInsets.symmetric(
                vertical: widget.mediaQuerySize.height * 0.014),
            onPressed: () async {
...
                    _usernameController.text, _passwordController.text);

                String m;

                switch (loginError) {
                  case LoginError.usernameNotFound:
                    m = "Username not found";
                    Scaffold.of(context).showSnackBar(
                        _authErrorSnackBar(m, widget.mediaQuerySize.width));
                    break;
                  case LoginError.wrongPwd:
                    m = 'Wrong password';
                    Scaffold.of(context).showSnackBar(
                        _authErrorSnackBar(m, widget.mediaQuerySize.width));
                    break;
                  case LoginError.userDisabled:
                    m = 'User disabled';
                    Scaffold.of(context).showSnackBar(
                        _authErrorSnackBar(m, widget.mediaQuerySize.width));
                    break;
                  case LoginError.invalidEmail:
                    m = 'Sign in failed. Internal error.';
                    Scaffold.of(context).showSnackBar(
...
