...
                        }

                        return Container(
                          margin: EdgeInsets.only(bottom: _bottomPadding),
                          child: Column(
                            children: <Widget>[
                              _OptionalColumn('PINNED', notes: pinnedNotes),
                              _OptionalColumn('OTHERS', notes: unpinnedNotes),
                              _OptionalColumn('ARCHIVED', notes: archivedNotes),
                            ],
                          ),
                        );
                      }
                      return Container();
...
